// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Basic renders correctly 1`] = `
<div>
  <div
    class="css-1904cz9-boxStyles-FieldContainer"
  >
    <label
      class="css-79i25n-boxStyles"
      for="field-:r0:"
    >
      <span
        class="css-433uqb-boxStyles-Text"
      >
        Example
      </span>
      <span
        class="css-1rpt3h8-boxStyles-Text"
      >
         
        (optional)
      </span>
    </label>
    <div
      class="css-1bg5d3h-SelectContainer"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="css-9hsy87-Field"
        id="field-:r0:"
      >
        <option
          value="a"
        >
          Option A
        </option>
        <option
          value="b"
        >
          Option B
        </option>
        <option
          value="c"
        >
          Option C
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="css-1j4iiu7-SelectIcon"
        clip-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 8L12 17L3 8"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Grouped options renders correctly 1`] = `
<div>
  <div
    class="css-1904cz9-boxStyles-FieldContainer"
  >
    <label
      class="css-79i25n-boxStyles"
      for="field-:r2:"
    >
      <span
        class="css-433uqb-boxStyles-Text"
      >
        Example
      </span>
      <span
        class="css-1rpt3h8-boxStyles-Text"
      >
         
        (optional)
      </span>
    </label>
    <div
      class="css-1bg5d3h-SelectContainer"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="css-9hsy87-Field"
        id="field-:r2:"
      >
        <optgroup
          label="Group A"
        >
          <option
            value="a"
          >
            Option A
          </option>
          <option
            value="b"
          >
            Option B
          </option>
          <option
            value="c"
          >
            Option C
          </option>
        </optgroup>
        <optgroup
          label="Group B"
        >
          <option
            value="d"
          >
            Option D
          </option>
          <option
            value="e"
          >
            Option E
          </option>
          <option
            value="f"
          >
            Option F
          </option>
        </optgroup>
      </select>
      <svg
        aria-hidden="true"
        class="css-1j4iiu7-SelectIcon"
        clip-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 8L12 17L3 8"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Invalid renders correctly 1`] = `
<div>
  <div
    class="css-1n67ua0-boxStyles-FieldContainer"
  >
    <label
      class="css-79i25n-boxStyles"
      for="field-:r6:"
    >
      <span
        class="css-433uqb-boxStyles-Text"
      >
        Example
      </span>
      <span
        class="css-1rpt3h8-boxStyles-Text"
      >
         
        (optional)
      </span>
    </label>
    <div
      class="css-1xkbxzi-boxStyles"
    >
      <div
        class="css-1ldvxqr-boxStyles"
      >
        <svg
          aria-hidden="false"
          aria-label="Error"
          class="css-1cvvs16-FieldMessage"
          clip-rule="evenodd"
          focusable="true"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16.4661 0.5C16.7332 0.5 16.9893 0.6069 17.1771 0.796862L23.2111 6.89871C23.3962 7.08591 23.5 7.33857 23.5 7.60185V16.3935C23.5 16.6595 23.394 16.9146 23.2055 17.1023L17.0712 23.2087C16.8838 23.3953 16.6301 23.5 16.3657 23.5H7.63889C7.37177 23.5 7.11576 23.3931 6.92792 23.2032L0.789033 16.9968C0.60386 16.8095 0.5 16.5569 0.5 16.2935V7.60646C0.5 7.34045 0.605983 7.08541 0.794505 6.89774L6.92885 0.791284C7.11625 0.604732 7.36991 0.5 7.63434 0.5H16.4661ZM16.7071 7.29289C17.0976 7.68342 17.0976 8.31658 16.7071 8.70711L13.4142 12L16.7071 15.2929C17.0976 15.6834 17.0976 16.3166 16.7071 16.7071C16.3166 17.0976 15.6834 17.0976 15.2929 16.7071L12 13.4142L8.70711 16.7071C8.31658 17.0976 7.68342 17.0976 7.29289 16.7071C6.90237 16.3166 6.90237 15.6834 7.29289 15.2929L10.5858 12L7.29289 8.70711C6.90237 8.31658 6.90237 7.68342 7.29289 7.29289C7.68342 6.90237 8.31658 6.90237 8.70711 7.29289L12 10.5858L15.2929 7.29289C15.6834 6.90237 16.3166 6.90237 16.7071 7.29289Z"
            fill="currentColor"
            fill-rule="evenodd"
            stroke="none"
          />
        </svg>
      </div>
      <span
        class="css-tfsyf8-boxStyles-Text"
        id="field-:r6:-message"
      >
        This field is required
      </span>
    </div>
    <div
      class="css-1bg5d3h-SelectContainer"
    >
      <select
        aria-describedby="field-:r6:-message"
        aria-invalid="true"
        aria-required="false"
        class="css-jkl2mv-Field"
        id="field-:r6:"
      >
        <option
          value="a"
        >
          Option A
        </option>
        <option
          value="b"
        >
          Option B
        </option>
        <option
          value="c"
        >
          Option C
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="css-1j4iiu7-SelectIcon"
        clip-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 8L12 17L3 8"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select With hint renders correctly 1`] = `
<div>
  <div
    class="css-1904cz9-boxStyles-FieldContainer"
  >
    <label
      class="css-79i25n-boxStyles"
      for="field-:r4:"
    >
      <span
        class="css-433uqb-boxStyles-Text"
      >
        Example
      </span>
      <span
        class="css-1rpt3h8-boxStyles-Text"
      >
         
        (optional)
      </span>
    </label>
    <div
      class="css-1bg5d3h-SelectContainer"
    >
      <select
        aria-invalid="false"
        aria-required="false"
        class="css-9hsy87-Field"
        id="field-:r4:"
      >
        <option
          value="a"
        >
          Option A
        </option>
        <option
          value="b"
        >
          Option B
        </option>
        <option
          value="c"
        >
          Option C
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="css-1j4iiu7-SelectIcon"
        clip-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 8L12 17L3 8"
        />
      </svg>
    </div>
  </div>
</div>
`;
